🐛 Fix gap in app form

--- a/apps/overwolf/src/sender/Streaming.module.css
+++ b/apps/overwolf/src/sender/Streaming.module.css
@@ -23,7 +23,7 @@
 
 .form {
   display: grid;
-  row-gap: 0.8rem;
+  row-gap: 0.5rem;
 }
 
 .guide {
